tests/e2e/indentation_error.error
Error: syntax error in story at line 2, column 15

2|      x = x + item1
                     ^

E0077: Invalid indentation detected. Did you mix tabs and spaces?
